Add event listening function to openvr device

This patch add event listening function to openvr device by integrate pollNextEvent function into
OpenVRDevice::OpenVRRenderLoop class and regist a callback function from OpenVRDevice to response to events.

Currently, it only deal with events which generated by openvr device setting changes.

BUG=714302

Review-Url: https://codereview.chromium.org/2834843002
Cr-Commit-Position: refs/heads/master@{#470771}

Former-commit-id: f548f57a4ec26eabaec6e466ee668aa29834b6c2